CHANGELOG
---------

Version 0.9.9.1-git - NA
- update log level to 3 for clickatell getsmsstatus
- add new webservices type of action IX to get SMS on user's inbox
- add logger_print() at the begining and the end of webservices
- add DBHOST and DBPORT on install script
- remove themes 'km2'
- fix #90 webservices list all incoming SMS on ta=in regardless of uid

Version 0.9.9 - 130625
- update sendsmsd daemon to enable parallel multi queue processing
- update config.php to include options for sendsmsd queue number and queue length limit
- update http method to POST in SMS custom (endymuhardin)
- update uplink gateway to use webservices username and token
- update deprecated commands eregi, ereg and ereg_replace with preg_match and preg_replace
- update Send SMS page to split between send to numbers and to groups
- update webservices to require username when validating requests
- add $core_config['webservices_username'] option in config.php, default is TRUE
- add core_get_timezone() and core_get_datetime()
- add new webservices type of action get_contact to get contact lists
- add new webservices ta=get_contact_group to search group contacts by name or code
- add new webservices ta=get_contact to search contacts by name, mobile or email
- add $phonebook_row_limit and set it to 20k entries per upload
- add sms_count on create queue and push to queue
- add a unique process ID for log
- add bash script to send sms via the webservices interface (aseques)
- add core_sanitize_sender() and fix sendsms_get_sender()
- add core_sanitize_alphanumeric() core_sanitize_alpha() core_sanitize_numeric()
- add automatically create directory "$sms_command_bin/$uid" for SMS command
- add a language full backup script
- add type of action IN (ta=in) to retrieves incoming SMS from playSMS webservices
- add set_time_limit(600) in various places such as import contacts and send from file
- replace mktime() as random generator for md5() on several lines with uniqid()