@@ -34,9 +34,9 @@ switch ($op) {
 			<thead>
 			<tr>
 				<th align=center width=10%>*</th>
-				<th align=center width=10%>"._('User')."</th>
-				<th align=center width=20%>"._('From')."</th>
-				<th align=center width=60%>"._('Message')."</th>
+				<th align=center width=15%>"._('User')."</th>
+				<th align=center width=25%>"._('From')."</th>
+				<th align=center width=50%>"._('Message')."</th>
 				<th width=4 class=\"sorttable_nosort\"><input type=checkbox onclick=CheckUncheckAll(document.fm_inbox)></td>
 			</tr>
 			</thead>
