@@ -213,7 +213,7 @@ li {
 
 #user_inbox_msg {
 	word-wrap: break-word;
-	width: 480px;
+	width: 400px;
 }
 
 #user_incoming_msg {
@@ -228,7 +228,7 @@ li {
 
 #all_inbox_msg {
 	word-wrap: break-word;
-	width: 400px;
+	width: 320px;
 }
 
 #all_incoming_msg {
@@ -238,6 +238,6 @@ li {
 
 #all_outgoing_msg {
 	word-wrap: break-word;
-	width: 190px;
+	width: 220px;
 }
 
